--- a/SEESS.css
+++ b/SEESS.css
@@ -2,3 +2,52 @@
     color: #ffffff;
     font-size: 25px;
 }
+
+html{
+    background-color: darkblue;
+    text-align: center;
+}
+
+.gameover-bg{
+    position: absolute;
+    z-index: 999;
+    background: darkgray;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+}
+
+
+.gameover-message{
+    text-align: center;
+    padding: 20px;
+    width: 146px;
+    margin: 0 auto;
+    /* margin-left: 50%; */
+    z-index: 1002;
+    border: 1px solid #fff;
+    background: cornflowerblue;
+    border-radius: 10px;
+    position: absolute;
+    left: 40%;
+    top: 30%;
+}
+
+#gameover-msg{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.restart-btn, .pause-btn{
+    background: #000;
+    border: none;
+    width: 90px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: green;
+    padding: 5px;
+    font-weight: 800;
+}
