--- a/global.css
+++ b/global.css
@@ -8,7 +8,7 @@ html{
     text-align: center;
 }
 
-.gameover-bg{
+.overlap-bg{
     position: absolute;
     z-index: 999;
     background: darkgray;
@@ -50,4 +50,17 @@ html{
     color: green;
     padding: 5px;
     font-weight: 800;
+}
+
+#load-msg{
+    z-index: 999999;
+    position: absolute;
+    background: #000;
+    color: #fff;
+    width: 20%;
+    left: 40%;
+    top: 25%;
+    opacity: 0.8;
+    font-size: 36px;
+    border-radius: 9px;
 }
