--- a/global.css
+++ b/global.css
@@ -70,6 +70,7 @@ html{
     font-size: 35px;
     padding: 55px;
     margin-left: 35%;
+    top: 25%;
     z-index: 999999999999999;
     background-color: gray;
     border-radius: 9px;
